cmake_minimum_required(VERSION 3.22)
project(COMP308_Pong)

set(CMAKE_CXX_STANDARD 11)
include_directories(.)
add_executable(COMP308_Pong main.cpp)
find_package(OpenGL REQUIRED)
find_package(GLUT REQUIRED)
include_directories(${OPENGL_INCLUDE_DIRS} ${GLUT_INCLUDE_DIRS})
target_link_libraries(COMP308_Pong ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES})